<resources>
    <string name="app_name">Porch Pirate Protector</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="log_in_title">Log In</string>
    <string name="log_in_button_title">Log In</string>
    <string name="create_account_button_title">Create Account</string>
    <string name="porch_pirate_protector_title">Porch Pirate Protector 🔐</string>
    <string name="create_account_title">Create Account</string>
    <string name="lock_button_title">Lock</string>
    <string name="unlock_button_title">Unlock</string>
</resources>
