<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="70sp"
                android:text="@string/porch_pirate_protector_title"
                android:gravity="center"/>
        <com.google.android.material.button.MaterialButton
                android:text="@string/create_account_button_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="284dp"
                tools:layout_editor_absoluteX="145dp"
                android:id="@+id/button_create_account"/>
        <com.google.android.material.button.MaterialButton
                android:text="@string/log_in_button_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_login"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>